Fixed some issues Added links to Google mail messages abstracted auth context to make it work for either Google or MS

--- a/google-productivity-extension/src/i18n/en.json
+++ b/google-productivity-extension/src/i18n/en.json
@@ -4,6 +4,7 @@
         "google.signIn": "Sign in to Google",
         "google.signedOut": "Signed out of Google",
         "google.launchMessage": "Open Google Drive",
+        "google.permissionsRequested": "Permissions Requested",
         "mail.unread": "You have {unread} unread email",
         "mail.unreads": "You have {unread} unread emails",
         "mail.launchMessage": "Open Google GMail"
