Updates from UX review Updated readme.md

--- a/productivity-tools-extensions/src/i18n/en.json
+++ b/productivity-tools-extensions/src/i18n/en.json
@@ -5,12 +5,11 @@
         "drive.modifiedBy": "Modified: {date} by {name}",
         "drive.noFiles": "You have no files yet",
         "google.signIn": "Sign in with Google",
+        "google.signOut": "Sign out",
         "google.openDrive": "Open Drive",
         "google.openGmail": "Open Gmail",
         "google.permissionsRequested": "Permissions Requested",
         "mail.attachment": "Attachment",
-        "mail.noMessages": "You have no email yet",
-        "development.signOut": "Sign out",
-        "development.revokePermissions": "Revoke permissions"
+        "mail.noMessages": "You have no email yet"
     }
 }
