Windows buildable and fixes
Adding sourceType: 'unambigous' to babel.config.js - thanks Jeremy Brown
Fixed case where modifiedBy is not always set

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -3,6 +3,7 @@
     "error.contentNotAvailable": "المحتوى غير متوفر",
     "error.contactYourAdministrator": "تواصل مع مسؤول النظام",
     "drive.modifiedBy": "تم تعديل: {date} بواسطة {name}",
+    "drive.modified": "تم تعديل: {date}",
     "google.signIn": "تسجيل الدخول باستخدام حساب Google",
     "google.openDrive": "فتح Drive",
     "google.openGmail": "فتح Gmail",
