--- a/src/i18n/fr-CA.json
+++ b/src/i18n/fr-CA.json
@@ -3,7 +3,6 @@
     "error.contentNotAvailable": "Contenu non disponible",
     "error.contactYourAdministrator": "Contactez votre administrateur",
     "drive.modifiedBy": "Modifié le {date} par {name}",
-    "drive.modified": "Modifié le {date}",
     "google.signIn": "Se connecter avec Google",
     "google.openDrive": "Ouvrir Drive",
     "google.openGmail": "Ouvrir Gmail",
@@ -13,8 +12,8 @@
     "google.noEmailTitle": "Aucun courriel dans Gmail",
     "google.noEmailMessage": "Votre boîte de réception est vide, accédez à Gmail pour commencer à envoyer et recevoir des courriels.",
     "mail.attachment": "Pièce jointe",
-    "mail.noMessages": "Vous n'avez pas encore de courriel.",
-    "microsoft.noFilesTitle": "Aucun fichier dans OneDrive",
+    "mail.noMessages": "Vous n’avez pas encore de courriel.",
+    "microsoft.noFilesTitle": "Aucun fichier dans One Drive",
     "microsoft.noFilesMessage": "Accédez à One Drive pour commencer à ajouter des fichiers",
     "microsoft.noEmailTitle": "Aucun courriel",
     "microsoft.noEmailMessage": "Votre boîte de réception est vide.",
