Added W75 Drive and Calendar Cards

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -4,6 +4,9 @@
     "error.contactYourAdministrator": "تواصل مع مسؤول النظام",
     "drive.modifiedBy": "تم تعديل: {date} بواسطة {name}",
     "drive.modified": "تم تعديل: {date}",
+    "google.signIn": "تسجيل الدخول باستخدام حساب Google",
+    "google.openDrive": "فتح Drive",
+    "google.openGmail": "فتح Gmail",
     "google.permissionsRequested": "الأذونات المطلوبة",
     "google.noFilesTitle": "لا توجد ملفات في Google Drive",
     "google.noFilesMessage": "الانتقال إلى Google Drive للبدء في إضافة الملفات",
