--- a/src/i18n/w75_en.json
+++ b/src/i18n/w75_en.json
@@ -24,6 +24,13 @@
         "microsoft.unreadCountMessage": "You have {unread} unread messages.",
         "microsoft.unreadCountMessage2": "You have {unread}/{count} unread messages.",
         "signIn": "Sign in",
-        "signOut": "Sign out"
+        "signOut": "Sign out",
+        "allowPopups": "To sign into your nwc.edu account, allow popups for experience.elluciancloud.com to enable Microsoft Sign In popups or use Ctrl+Click on the Sign In button to popup the Sign In.",
+        "oneDriveLinkMsg": "Click here to open a new tab to your OneDrive.  Please remember to sign-out of your OneDrive when using public computers to prevent other people from accessing your files.",
+        "oneDriveLinkTxt": "Open NWC OneDrive",
+        "oneDriveURL": "https://nwc0-my.sharepoint.com/_layouts/15/MySite.aspx?MySiteRedirect=AllDocuments",
+        "outlookLinkMsg": "Click here to open your NWC Outlook Inbox.  Please remember to sign-out of your e-mail when using public computers to prevent other people from accessing your email account.",
+        "outlookLinkTxt": "Open NWC Outlook",
+        "outlookURL": "https://outlook.com/nwc.edu"
     }
 }
