--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -36,12 +36,19 @@
         "outlookLinkMsg": "Click here to open your NWC Outlook Inbox.  Please remember to sign-out of your e-mail when using public computers to prevent other people from accessing your email account.",
         "outlookLinkTxt": "Open NWC Outlook",
         "outlookURL": "https://outlook.com/nwc.edu",
-        "outlookCalendarLinkMsg": "Click here to open your NWC Outlook Calendar.  Please rememver to sign-out of your Outlook account when using public computers to prevent other people from accessing your account.",
+        "outlookComposeURL": "mailto:",
+        "outlookComposeLinkMsg": "Click to Compose a New Email in Outlook",
+        "outlookCalendarLinkMsg": "Click here to open your NWC Outlook Calendar.  Please remember to sign-out of your Outlook account when using public computers to prevent other people from accessing your account.",
         "outlookCalendarLinkTxt": "Open NWC Outlook Calendar",
-        "outlookCalendarURL": "https://outlook.office365.com/calendar",
+        "outlookCalendarURL": "https://outlook.office.com/calendar",
+        "outlookNewEventURL": "https://outlook.office.com/calendar/deeplink/compose",
+        "outlookNewEventLinkTxt": "Click to Create an Appointment on your Outlook Calendar.  On mobile browsers, after you save the event, the tab will reload event creation site, so you may create another or close the tab to finish.",
         "noEventsTitle": "No Events in Calendar",
         "noEventsMessage": "You have no events on your calendar.",
         "eventOrganizerLabel": "Organizer: ",
-        "eventLocationLabel": "Location: "
+        "eventLocationLabel": "Location: ",
+        "newLabel": "New",
+        "newMailLabel": "New Email Message",
+        "newEventLabel": "New Calendar Event"
     }
 }
